$Id: ChangeLog,v 1.91 2007-09-25 00:32:40 cmatsuoka Exp $

Stable versions
---------------

2.3.0 ()
	- added runtime endianism detection
	- added extractor for Epic Games' Unreal UMX files
	- removed reverse-endian sample reading options and XMP_CTL_BIGEND
	- fixed semantics of options --big-endian and --little-endian
	- fixed memory corruption in Quadra Composer module loader
	- fixed Quadra Composer vibrato, offset and jump effects
	- fixed endianism problem in KSM and Zen Packer loaders
	- fixed transposition of Digital Tracker module notes
	- fixed build for QNX Neutrino 6.3.2
	- fixed OSS sequencer driver timing (reported by Reynir Stefansson)
	- fixed BMP/Audacious plugin to build also as XMMS plugin
	- fixed Impulse Tracker identification in S3M loader
	- fixed Module Protector test to recognize mods from "Made In Croatia"
	- fixed crash when scanning modules with length zero (bug #1800766)
	- fixed driver detection in NetBSD (don't try to build OSS driver)
	- prowizard code cleanup

2.2.1 (20070917)
	- added IT tracker fingerprinting
	- enabled track volumes (fixes znm-believe.it, reported by Jon Rafkind)
	- fixed DESTDIR and config file location (by Adam Sampson)
	- fixed volume overdrive in the Megatracker loader
	- fixed probing order of PW-packed and Arc
	- raised sample number limit from 255 to 1024 (fixes megaman.xm
	  tempo and missing instruments reported by Jon Rafkind)
	- build plugin files as PIC

2.2.0 (20070915)
	- added more module format specs
	- added CD61 Octalyser module support
	- added Flextrax FLX module detection
	- added TCB Tracker module loader
	- added Digital Tracker DTM module loader
	- added Digital Tracker FA04/6/8 module support
	- added Real Tracker module loader
	- added X-Tracker module loader
	- added portable, 64bit-safe MMD0/1/2/3 MED loader
	- added Graoumf Tracker GTK module loader
	- added old Liquid Tracker "NO" module loader
	- added OSX CoreAudio driver
	- added S3M/PTM/IMF/LIQ/IT fine vibrato effect