@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.91 2007-09-25 00:32:40 cmatsuoka Exp $
+$Id: ChangeLog,v 1.92 2007-09-25 11:23:29 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -19,6 +19,7 @@ Stable versions
 	- fixed Module Protector test to recognize mods from "Made In Croatia"
 	- fixed crash when scanning modules with length zero (bug #1800766)
 	- fixed driver detection in NetBSD (don't try to build OSS driver)
+	- format management code cleanup
 	- prowizard code cleanup
 
 2.2.1 (20070917)
